--- a/nodejs/index.html
+++ b/nodejs/index.html
@@ -28,7 +28,7 @@
 				window.onblur = pageBlur;
 			}
 
-			var socket = io('/six-neck');
+			var socket = io(':#port#/six-neck');
 
 			var center = new Point(0, 0);
 			var init = new Array(19);
