--- a/nodejs/aib.html
+++ b/nodejs/aib.html
@@ -5,9 +5,9 @@
 	<meta charset="utf-8" />
 </head>
 <body>
-	<form action='/uploadb' method='post' enctype='multipart/form-data' name='uploadb'>
+	<form action='/uploadb' method='post' enctype='multipart/form-data'>
 		<input type='file' name='aibfile' required />
-		<input type='submit' name='upload' value='Submit' />
+		<input type='submit' name='uploadb' value='Submit' />
 	</form>
 </body>
 </html>
