--- a/nodejs/aiw.html
+++ b/nodejs/aiw.html
@@ -5,9 +5,9 @@
 	<meta charset="utf-8" />
 </head>
 <body>
-	<form action='/uploadw' method='post' enctype='multipart/form-data' name='uploadw'>
-		<input type='file' name='aibfile' required />
-		<input type='submit' name='upload' value='Submit' />
+	<form action='/uploadw' method='post' enctype='multipart/form-data'>
+		<input type='file' name='aiwfile' required />
+		<input type='submit' name='uploadw' value='Submit' />
 	</form>
 </body>
 </html>
