--- a/nodejs/aib.html
+++ b/nodejs/aib.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 </head>
 <body>
-	<form action='/uploadb' method='post' enctype='multipart/form-data'>
+	<form action='uploadb' method='post' enctype='multipart/form-data'>
 		<input type='file' name='aibfile' required />
 		<input type='submit' name='uploadb' value='Submit' />
 	</form>
